--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a id="heronav" href="#hero">Inicio<br></a></li>
-          <li><a id="aboutnav" href="#about">Innovación</a></li>
-          <li><a id="tabsnav" href="#tabs">Impacto</a></li>
-          <li><a id="pricingnav" href="#pricing">Servicios</a></li>
-          <li><a id="faqnav" href="#faq">FAQ</a></li>
-          <li><a id="teamnav" href="#team">Equipo</a></li>
+          <li><a id="heronav" href="#hero" onclick="document.getElementById('hero').scrollIntoView({ behavior: 'smooth' }); return false;">Inicio<br></a></li>
+          <li><a id="aboutnav" href="#about" onclick="document.getElementById('about').scrollIntoView({ behavior: 'smooth' }); return false;">Innovación</a></li>
+          <li><a id="tabsnav" href="#tabs" onclick="document.getElementById('tabs').scrollIntoView({ behavior: 'smooth' }); return false;">Impacto</a></li>
+          <li><a id="pricingnav" href="#pricing" onclick="document.getElementById('pricing').scrollIntoView({ behavior: 'smooth' }); return false;">Servicios</a></li>
+          <li><a id="faqnav" href="#faq" onclick="document.getElementById('faq').scrollIntoView({ behavior: 'smooth' }); return false;">FAQ</a></li>
+          <li><a id="teamnav" href="#team" onclick="document.getElementById('team').scrollIntoView({ behavior: 'smooth' }); return false;">Equipo</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
